# lcl-classifier

./: .gitignore  README.md
src/: .editorconfig  .gitignore  README.md  api.py  backup.sh  batch_classify.py  brt_binding.py  classifier.py  complexity.py  config_util.py  cp_binding.py  db.py  deploy.sh  docker-compose.yml  file_util.py  generator.py  init-dummycert.sh  init-letsencrypt.sh  main.py  parser.py  problem.py  pyproject.toml  query.py  requirements.txt  response.py  rt_binding.py  spinup-docker.sh  statistics.py  storeJson.py  sync-sources.sh  tests.py  tlp_binding.py  util.py
src/bindings/: brt_binding.py  common.py  cp_binding.py  re_binding.py  rt_binding.py  tlp_binding.py
src/client/: .eslintrc.js  .gitignore  .prettierrc  Dockerfile  nginx.conf  package.json  tsconfig.json  webpack.config.js
src/jansDeciders/: README.md  common.py  log_decider.py  log_star_decider.py  tests.py
src/migrations/: v00_schema.sql
src/problems/: problems_2_2_3fffftfft.json  problems_2_2_3ffftffft.json  problems_2_2_3ffftftft.json  problems_rooted_bin_3_2_2.json  problems_rooted_bin_3_2_2_f_f_f.json  problems_rooted_bin_3_2_2_f_t_t.json  results_2_2_3fffftfft.json  results_2_2_3ffftftft.json  results_3_2_2fftfffft.json  results_3_2_2fttffftt.json  results_rooted_bin_3_2_2.json  results_rooted_bin_3_2_2_f_f_f.json  results_rooted_bin_3_2_2_f_t_t.json
src/server/: .gitignore  Dockerfile  README.md  api.py  batch_classify.py  classified_problem.py  classifier.py  classifier_types.py  classify_context.py  complexity.py  config_util.py  db.py  db_data_converter.py  (+15 more)
(+122 files in other folders)
