[tool.poetry]
name = "lcl-classifier"
version = "0.1.0"
description = ""
authors = ["Aleksandr Tereshchenko <aleksandr.tereshch@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.3"
tqdm = "4.48.2"
pyhumps = "1.6.1"
tlp-classifier = "0.1.10"
rooted-tree-classifier = "0.1.5"
cyclepath-classifier = "0.2.1"
brt-classifier = "0.1.14"
psycopg2-binary = "2.8.6"
flask = "1.1.2"
webargs = "7.0.1"
flask-cors = "3.0.10"
uwsgi = "2.0.19.1"

[tool.poetry.dev-dependencies]
mypy = "0.812"
black = "20.8b1"
pyflakes = "^2.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
